--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="OOP_EX2-Ex4/src"/>
 	<classpathentry kind="lib" path="json-simple-1.1.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-10">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
