--- a/.classpath
+++ b/.classpath
@@ -18,7 +18,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Downloads/Ex4_OOP/Ex4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Downloads/Ex4_OOP/Ex4_v0.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Downloads/Ex4_OOP/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
