--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 	<classpathentry kind="src" path="OOP_EX2-Ex4/src"/>
 	<classpathentry kind="lib" path="json-simple-1.1.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Downloads/Ex4_OOP/Ex4_v0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Downloads/Ex4_OOP/mysql-connector-java-5.1.47.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gal/Desktop/check/Ex4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Gal/Desktop/check/mysql-connector-java-5.1.47.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
