--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Documents/לימודים מדעי המחשב/מדמ&apos;&apos;ח שנה ב&apos; סמסטר א/מונחה עצמים/מטלות/מטלה 4/Ex4_OOP/Ex4_v0.2.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/Documents/לימודים מדעי המחשב/מדמ&apos;&apos;ח שנה ב&apos; סמסטר א/מונחה עצמים/מטלות/מטלה 4/Ex4_OOP/mysql-connector-java-5.1.47.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Roi Abramovitch/OneDrive - Ariel University/Desktop/Graph_101/Graph_v0.11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
